Fix break img stretching.

--- a/wp-content/themes/KidsArt/css/marco.css
+++ b/wp-content/themes/KidsArt/css/marco.css
@@ -794,7 +794,6 @@ span.herontwikkelMeerArrow {
 .actueel-intro-container-img img {
   opacity: 0.5;
   width: 100%;
-  height: 100%;
 }
 
 .main-navigation .menu-item-has-children.wpml-ls-current-language {
